--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-ractive-bin",
-  "version": "2.0.0-alpha-1",
+  "version": "2.0.0-alpha-2",
   "description": "build Ractive.js components using rollup and the library behind the ractive bin",
   "main": "index.js",
   "author": "Chris Reeves <evschris@gmail.com>",
@@ -18,10 +18,10 @@
     "url": "https://github.com/ractivejs/rollup-plugin-ractive-bin/issues"
   },
   "dependencies": {
-    "ractive": "> 1.0"
+    "ractive": "^1.3.12"
   },
   "peerDependencies": {
-    "ractive": ">= 0.9",
-    "rollup": "> 0.1"
+    "ractive": ">= 1.0",
+    "rollup": "> 2.0"
   }
 }
